# xmpp-tunnel

./: AUTHORS  Makefile.am  android_build.sh  configure.in
debian/: changelog  control  copyright  rules  watch
libcommon/: configure.in
libcommon/src/: Makefile.am
libcommon/src/common/: CException.cpp  CException.h  CObject.cpp  CObject.h
libcommon/src/common/crypto/aes/: CAes.cpp  CAes.h
libcommon/src/common/crypto/rsa/: CRsa.cpp  CRsa.h  CRsaKey.cpp  CRsaKey.h
libcommon/src/common/data/: CBase64.cpp  CBase64.h  CBuffer.cpp  CBuffer.h
libcommon/src/common/socket/: CAddress.cpp  CAddress.h  CConnection.cpp  CConnection.h
libcommon/src/common/socket/tcp/: CTCPAddress.cpp  CTCPAddress.h  CTCPConnection.cpp  CTCPConnection.h
libcommon/src/common/socket/tcp/tls/: CTLSConnection.cpp  CTLSConnection.h
libcommon/src/common/thread/: CMutex.cpp  CMutex.h  CThread.cpp  CThread.h
libcommon/src/common/tun/: tun.cpp  tun.h
libcommon/src/common/xml/: CXMLNode.cpp  CXMLNode.h  CXMLParser.cpp  CXMLParser.h
libresox/: configure.in
libresox/src/: Makefile.am
libresox/src/resox/: CResox.cpp  CResox.h
libresoxserver/: configure.in
libresoxserver/src/: Makefile.am
libresoxserver/src/resoxserver/: CResoxServer.cpp  CResoxServer.h
libxmpp/: AUTHORS  configure.in
libxmpp/src/: Makefile.am
libxmpp/src/xmpp/core/: CHandler.cpp  CHandler.h  CXMLFilter.cpp  CXMLFilter.h  CXMPPCore.cpp  CXMPPCore.h
libxmpp/src/xmpp/im/: CRoster.cpp  CRoster.h  CRosterItem.cpp  CRosterItem.h  CXMPPInstMsg.cpp  CXMPPInstMsg.h
libxmpp/src/xmpp/jid/: CJid.cpp  CJid.h
libxmpp/src/xmpp/stanza/: CStanza.cpp  CStanza.h
libxmpp/src/xmpp/stanza/iq/: CIQStanza.cpp  CIQStanza.h
libxmpp/src/xmpp/stanza/iq/error/: CIQErrorStanza.cpp  CIQErrorStanza.h
libxmpp/src/xmpp/stanza/iq/get/: CIQGetStanza.cpp  CIQGetStanza.h
libxmpp/src/xmpp/stanza/iq/result/: CIQResultStanza.cpp  CIQResultStanza.h
libxmpp/src/xmpp/stanza/iq/set/: CIQSetStanza.cpp  CIQSetStanza.h
libxmpp/src/xmpp/stanza/message/: CMessageStanza.cpp  CMessageStanza.h
libxmpp/src/xmpp/stanza/presence/: CPresenceStanza.cpp  CPresenceStanza.h
libxmpp/src/xmpp/stanza/stream/: CAuthStanza.cpp  CAuthStanza.h  CChallengeStanza.cpp  CChallengeStanza.h  CCloseStanza.cpp  CCloseStanza.h  CFeaturesStanza.cpp  CFeaturesStanza.h  COpenStanza.cpp  COpenStanza.h  CProceedStanza.cpp  CProceedStanza.h  CResponseStanza.cpp  CResponseStanza.h  CStarttlsStanza.cpp  CStarttlsStanza.h  CSuccessStanza.cpp  CSuccessStanza.h
libxmpp/src/xmpp/xep/disco/: CXEPdisco.cpp  CXEPdisco.h
libxmpp/src/xmpp/xep/ssh/: CXEPssh.cpp  CXEPssh.h  CXEPsshd.cpp  CXEPsshd.h
libxmpp/src/xmpp/xep/ssh/auth/: CAuthentication.cpp  CAuthentication.h
libxmpp/src/xmpp/xep/ssh/node/: CSessionAuthClientDoneNode.cpp  CSessionAuthClientDoneNode.h  CSessionAuthClientFeaturesGetNode.cpp  CSessionAuthClientFeaturesGetNode.h  CSessionAuthClientFeaturesResultNode.cpp  CSessionAuthClientFeaturesResultNode.h  CSessionAuthClientStartNode.cpp  CSessionAuthClientStartNode.h  CSessionAuthServerDoneNode.cpp  CSessionAuthServerDoneNode.h  CSessionAuthServerFeaturesGetNode.cpp  CSessionAuthServerFeaturesGetNode.h  CSessionAuthServerFeaturesResultNode.cpp  CSessionAuthServerFeaturesResultNode.h  CSessionAuthServerStartNode.cpp  CSessionAuthServerStartNode.h  CSessionKeyExchangeDoNode.cpp  CSessionKeyExchangeDoNode.h  CSessionKeyExchangeDoneNode.cpp  CSessionKeyExchangeDoneNode.h  CSessionKeyExchangeFeaturesGetNode.cpp  CSessionKeyExchangeFeaturesGetNode.h  CSessionKeyExchangeFeaturesResultNode.cpp  CSessionKeyExchangeFeaturesResultNode.h  CSessionKeyExchangeStartNode.cpp  CSessionKeyExchangeStartNode.h  CSessionShellDataNode.cpp  CSessionShellDataNode.h
libxmpp/src/xmpp/xep/ssh/virtualshell/: CVirtualShell.cpp  CVirtualShell.h
libxmpp/src/xmpp/xep/xibb/: CChannel.cpp  CChannel.h  CChannelManager.cpp  CChannelManager.h  CStream.cpp  CStream.h  CXEPxibb.cpp  CXEPxibb.h
libxmpp/src/xmpp/xep/xibb/handler/: CChannelCloseHandler.cpp  CChannelCloseHandler.h  CChannelDataHandler.cpp  CChannelDataHandler.h  CChannelOpenHandler.cpp  CChannelOpenHandler.h  CPresenceHandler.cpp  CPresenceHandler.h  CStreamCloseHandler.cpp  CStreamCloseHandler.h  CStreamDataHandler.cpp  CStreamDataHandler.h  CStreamOpenHandler.cpp  CStreamOpenHandler.h
libxmpp/src/xmpp/xep/xibb/stanza/: CChannelCloseStanza.cpp  CChannelCloseStanza.h  CChannelDataStanza.cpp  CChannelDataStanza.h  CChannelOpenStanza.cpp  CChannelOpenStanza.h  CStreamCloseStanza.cpp  CStreamCloseStanza.h  CStreamDataStanza.cpp  CStreamDataStanza.h  CStreamOpenStanza.cpp  CStreamOpenStanza.h
libxmpp/src/xmpp/xml/: CXMPPParser.cpp  CXMPPParser.h
src/: CInterface.cpp  CInterface.h  CSSHConfig.cpp  CSSHConfig.h  CSSHDConfig.cpp  CSSHDConfig.h  Makefile.am  xmpp-ssh.cpp  xmpp-sshd.cpp  xmpp-tunnel.cpp  xmpp-tunneld.cpp
