AC_INIT(xmpp-sshd, 0.1, adrien.pinet@gmail.com)

AM_CONFIG_HEADER([config.h])
AM_INIT_AUTOMAKE(xmpp-sshd, 0.1)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB
AC_CANONICAL_HOST

AC_CONFIG_SUBDIRS(libcommon libxmpp libresoxserver)

# Checks for libraries.

case "$host" in
*-*-linux*)
	CPPFLAGS="$CPPFLAGS -Wall -ansi -pedantic -D__LINUX__"
	CPPFLAGS="$CPPFLAGS -I../libcommon/src"
	CPPFLAGS="$CPPFLAGS -I../libxmpp/src"
	CPPFLAGS="$CPPFLAGS -I../libresoxserver/src"

	LDFLAGS="$LDFLAGS -L../libresoxserver/src -L../libxmpp/src -L../libcommon/src"
	LIBS="$LIBS -lresoxserver -lxmpp -lcommon -lexpat -lssl -lcrypto -lcrypt"
	;;

*-*-*darwin*)
	CPPFLAGS="$CPPFLAGS -Wall -ansi -pedantic -D__APPLE__"
	CPPFLAGS="$CPPFLAGS -I../libcommon/src"
	CPPFLAGS="$CPPFLAGS -I../libxmpp/src"
	CPPFLAGS="$CPPFLAGS -I../libresoxserver/src"

	LDFLAGS="$LDFLAGS -L../libcommon/src -L../libxmpp/src -L../libresoxserver/src"
	LIBS="$LIBS -lresoxserver -lxmpp -lcommon -lexpat -lssl -lcrypto"
	LIBS="$LIBS -framework DirectoryService -framework CoreFoundation"
	;;
esac


AC_HEADER_STDC
AC_CHECK_HEADERS([iostream fstream string])


# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST

# Checks for library functions.

AC_CONFIG_FILES([Makefile
		 src/Makefile])

AC_OUTPUT
