AC_INIT(libcommon, 0.1, adrien.pinet@gmail.com)
AM_CONFIG_HEADER([config.h])
AM_INIT_AUTOMAKE(libcommon, 0.1)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB
AC_CANONICAL_HOST

# Checks for libraries.

case "$host" in
*-*-linux*)
	CPPFLAGS="$CPPFLAGS -Wall -ansi -pedantic -D__LINUX__"
	;;

arm-*-*)
	CPPFLAGS="$CPPFLAGS -D__LINUX__ -D__ANDROID__"
	;;

*-*-*darwin*)
	CPPFLAGS="$CPPFLAGS -Wall -ansi -pedantic -D__APPLE__"
	;;
esac

# adding flags

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([fcntl.h netdb.h netinet/in.h stdlib.h string.h sys/ioctl.h sys/socket.h unistd.h openssl/rsa.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST

# Checks for library functions.
AC_CHECK_FUNCS([gethostbyname memset socket])


AC_CONFIG_FILES([Makefile
                 src/Makefile])
AC_OUTPUT
