noinst_LIBRARIES = libcommon.a

libcommon_a_SOURCES = common/CException.cpp                    \
  	              common/CException.h                      \
 		      common/CObject.cpp                       \
		      common/CObject.h                         \
		      common/crypto/aes/CAes.cpp               \
		      common/crypto/aes/CAes.h                 \
		      common/data/CBase64.cpp                  \
		      common/data/CBase64.h                    \
		      common/data/CBuffer.cpp                  \
		      common/data/CBuffer.h                    \
                      common/socket/CAddress.cpp               \
                      common/socket/CAddress.h                 \
                      common/socket/CConnection.cpp            \
                      common/socket/CConnection.h              \
                      common/socket/tcp/CTCPAddress.cpp        \
                      common/socket/tcp/CTCPAddress.h          \
                      common/socket/tcp/CTCPConnection.cpp     \
                      common/socket/tcp/CTCPConnection.h       \
                      common/socket/tcp/tls/CTLSConnection.cpp \
                      common/socket/tcp/tls/CTLSConnection.h   \
                      common/thread/CMutex.cpp                 \
                      common/thread/CMutex.h                   \
                      common/thread/CThread.cpp                \
                      common/thread/CThread.h                  \
		      common/xml/CXMLNode.cpp                  \
                      common/xml/CXMLNode.h                    \
		      common/xml/CXMLParser.cpp                \
                      common/xml/CXMLParser.h                  \
		      common/tun/tun.cpp                       \
		      common/tun/tun.h
