noinst_LIBRARIES = libxmpp.a

libxmpp_a_SOURCES = xmpp/core/CHandler.cpp \
		    xmpp/core/CHandler.h \
		    xmpp/core/CXMPPCore.cpp \
                    xmpp/core/CXMPPCore.h \
		    xmpp/core/CXMLFilter.cpp \
		    xmpp/core/CXMLFilter.h \
		    xmpp/im/CXMPPInstMsg.cpp \
                    xmpp/im/CXMPPInstMsg.h \
                    xmpp/im/CRoster.cpp \
                    xmpp/im/CRoster.h \
                    xmpp/im/CRosterItem.cpp \
                    xmpp/im/CRosterItem.h \
                    xmpp/jid/CJid.cpp \
                    xmpp/jid/CJid.h \
                    xmpp/stanza/CStanza.cpp \
                    xmpp/stanza/CStanza.h \
                    xmpp/stanza/iq/CIQStanza.cpp \
                    xmpp/stanza/iq/CIQStanza.h \
                    xmpp/stanza/iq/error/CIQErrorStanza.cpp \
                    xmpp/stanza/iq/error/CIQErrorStanza.h \
                    xmpp/stanza/iq/get/CIQGetStanza.cpp \
                    xmpp/stanza/iq/get/CIQGetStanza.h \
                    xmpp/stanza/iq/result/CIQResultStanza.cpp \
                    xmpp/stanza/iq/result/CIQResultStanza.h \
                    xmpp/stanza/iq/set/CIQSetStanza.cpp \
                    xmpp/stanza/iq/set/CIQSetStanza.h \
                    xmpp/stanza/message/CMessageStanza.cpp \
                    xmpp/stanza/message/CMessageStanza.h \
                    xmpp/stanza/presence/CPresenceStanza.cpp \
                    xmpp/stanza/presence/CPresenceStanza.h \
                    xmpp/stanza/stream/CAuthStanza.cpp \
                    xmpp/stanza/stream/CAuthStanza.h \
                    xmpp/stanza/stream/CChallengeStanza.cpp \
                    xmpp/stanza/stream/CChallengeStanza.h \
                    xmpp/stanza/stream/CCloseStanza.cpp \
                    xmpp/stanza/stream/CCloseStanza.h \
                    xmpp/stanza/stream/CFeaturesStanza.cpp \
                    xmpp/stanza/stream/CFeaturesStanza.h \
                    xmpp/stanza/stream/COpenStanza.cpp \
                    xmpp/stanza/stream/COpenStanza.h \
                    xmpp/stanza/stream/CProceedStanza.cpp \
                    xmpp/stanza/stream/CProceedStanza.h \
                    xmpp/stanza/stream/CResponseStanza.cpp \
                    xmpp/stanza/stream/CResponseStanza.h \
                    xmpp/stanza/stream/CStarttlsStanza.cpp \
                    xmpp/stanza/stream/CStarttlsStanza.h \
                    xmpp/stanza/stream/CSuccessStanza.cpp \
                    xmpp/stanza/stream/CSuccessStanza.h \
                    xmpp/xep/disco/CXEPdisco.cpp \
                    xmpp/xep/disco/CXEPdisco.h \
                    xmpp/xep/ssh/CXEPssh.cpp \
                    xmpp/xep/ssh/CXEPssh.h \
                    xmpp/xep/ssh/CXEPsshd.cpp \
                    xmpp/xep/ssh/CXEPsshd.h \
                    xmpp/xep/ssh/auth/CAuthentication.cpp \
                    xmpp/xep/ssh/auth/CAuthentication.h \
                    xmpp/xep/ssh/node/CSessionAuthClientDoneNode.cpp \
                    xmpp/xep/ssh/node/CSessionAuthClientDoneNode.h \
                    xmpp/xep/ssh/node/CSessionShellDataNode.cpp \
                    xmpp/xep/ssh/node/CSessionShellDataNode.h \
                    xmpp/xep/ssh/node/CSessionAuthClientFeaturesGetNode.cpp \
                    xmpp/xep/ssh/node/CSessionAuthClientFeaturesGetNode.h \
                    xmpp/xep/ssh/node/CSessionAuthClientFeaturesResultNode.cpp \
                    xmpp/xep/ssh/node/CSessionAuthClientFeaturesResultNode.h \
                    xmpp/xep/ssh/node/CSessionAuthClientStartNode.cpp \
                    xmpp/xep/ssh/node/CSessionAuthClientStartNode.h \
                    xmpp/xep/ssh/node/CSessionAuthServerDoneNode.cpp \
                    xmpp/xep/ssh/node/CSessionAuthServerDoneNode.h \
                    xmpp/xep/ssh/node/CSessionAuthServerFeaturesGetNode.cpp \
                    xmpp/xep/ssh/node/CSessionAuthServerFeaturesGetNode.h \
                    xmpp/xep/ssh/node/CSessionAuthServerFeaturesResultNode.cpp \
                    xmpp/xep/ssh/node/CSessionAuthServerFeaturesResultNode.h \
                    xmpp/xep/ssh/node/CSessionAuthServerStartNode.cpp \
                    xmpp/xep/ssh/node/CSessionAuthServerStartNode.h \
                    xmpp/xep/ssh/node/CSessionKeyExchangeFeaturesGetNode.cpp \
                    xmpp/xep/ssh/node/CSessionKeyExchangeFeaturesGetNode.h \
                    xmpp/xep/ssh/node/CSessionKeyExchangeFeaturesResultNode.cpp \
                    xmpp/xep/ssh/node/CSessionKeyExchangeFeaturesResultNode.h \
		    xmpp/xep/ssh/node/CSessionKeyExchangeDoNode.cpp \
		    xmpp/xep/ssh/node/CSessionKeyExchangeDoNode.h \
		    xmpp/xep/ssh/node/CSessionKeyExchangeDoneNode.cpp \
		    xmpp/xep/ssh/node/CSessionKeyExchangeDoneNode.h \
		    xmpp/xep/ssh/node/CSessionKeyExchangeStartNode.cpp \
		    xmpp/xep/ssh/node/CSessionKeyExchangeStartNode.h \
		    xmpp/xep/ssh/virtualshell/CVirtualShell.cpp \
		    xmpp/xep/ssh/virtualshell/CVirtualShell.h \
                    xmpp/xep/xibb/CXEPxibb.cpp \
                    xmpp/xep/xibb/CXEPxibb.h \
                    xmpp/xep/xibb/CChannel.cpp \
                    xmpp/xep/xibb/CChannel.h \
                    xmpp/xep/xibb/CChannelManager.cpp \
                    xmpp/xep/xibb/CChannelManager.h \
                    xmpp/xep/xibb/CStream.cpp \
                    xmpp/xep/xibb/CStream.h \
		    xmpp/xep/xibb/handler/CChannelCloseHandler.cpp \
		    xmpp/xep/xibb/handler/CChannelCloseHandler.h \
		    xmpp/xep/xibb/handler/CChannelDataHandler.cpp \
		    xmpp/xep/xibb/handler/CChannelDataHandler.h \
		    xmpp/xep/xibb/handler/CChannelOpenHandler.cpp \
		    xmpp/xep/xibb/handler/CChannelOpenHandler.h \
		    xmpp/xep/xibb/handler/CPresenceHandler.cpp \
		    xmpp/xep/xibb/handler/CPresenceHandler.h \
		    xmpp/xep/xibb/handler/CStreamCloseHandler.cpp \
		    xmpp/xep/xibb/handler/CStreamCloseHandler.h \
		    xmpp/xep/xibb/handler/CStreamDataHandler.cpp \
		    xmpp/xep/xibb/handler/CStreamDataHandler.h \
		    xmpp/xep/xibb/handler/CStreamOpenHandler.cpp \
		    xmpp/xep/xibb/handler/CStreamOpenHandler.h \
		    xmpp/xep/xibb/stanza/CChannelCloseStanza.cpp \
		    xmpp/xep/xibb/stanza/CChannelCloseStanza.h \
		    xmpp/xep/xibb/stanza/CChannelDataStanza.cpp \
		    xmpp/xep/xibb/stanza/CChannelDataStanza.h \
		    xmpp/xep/xibb/stanza/CChannelOpenStanza.cpp \
		    xmpp/xep/xibb/stanza/CChannelOpenStanza.h \
		    xmpp/xep/xibb/stanza/CStreamCloseStanza.cpp \
		    xmpp/xep/xibb/stanza/CStreamCloseStanza.h \
		    xmpp/xep/xibb/stanza/CStreamDataStanza.cpp \
		    xmpp/xep/xibb/stanza/CStreamDataStanza.h \
		    xmpp/xep/xibb/stanza/CStreamOpenStanza.cpp \
		    xmpp/xep/xibb/stanza/CStreamOpenStanza.h \
                    xmpp/xml/CXMPPParser.cpp \
                    xmpp/xml/CXMPPParser.h
